style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");

body {
  box-sizing: border-box;
  width: auto;
  margin: 0;
}

.phone_template {
  box-sizing: border-box;
  min-width: 375px;
  min-height: 5410px;
  top: -1883px;
  left: 11282px;
  background: #f7f7f9;
  border: 1px solid#ebebff;
}

.head_template {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 718px;
  left: 1px;
  top: 1px;
  background-image: url("images/header-background.png");
  background-repeat: no-repeat;
  background-size: 100%;
}

.app_head_nav {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  height: 92px;
  width: 100%;
  padding: 24px;
}

.logo {
  width: 100%;
  height: 40px;
  top: calc(50% - 40px / 2);
  left: 12px;
  padding: 10px 12px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.logolink {
  font-family: 'Poppins', sans-serif;
  font-weight: 700;
  width: 100%;
  height: 5%;
  font-size: 18px;
  line-height: 20px;
  display: flex;
  color: #6070ff;
  flex: none;
  flex-grow: 0;
}

.logolink:hover {
  transform: rotate(60deg);
}

a {
  text-decoration: none;
}

a:focus {
  color: fuchsia;
}

a:active {
  color: chartreuse;
}

a:hover {
  color: darkorange;
}

.sidebut {
  padding: 8px;
  width: 40px;
  height: 40px;
  top: calc(50% - 40px / 2);
  border-radius: 8px;
}

.item_nav {
  display: none;
}

.main {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 24px;
  gap: 12px;
  width: 100%;
  left: calc(50% - 100px / 2);
  top: 92px;
  background-image: url("images/background1.png");
  background-repeat: no-repeat;
  background-size: 100%;
  order: 0;
}

h1 {
  width: 100%;
  padding: 0;
  margin: 0;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  color: #172b4d;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.p1 {
  display: flex;
  width: 100%;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.social_media_connection {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 1px;
  width: 50%;
  height: 80px;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.lets_connet_cont {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 1px;
  gap: 8px;
  width: 45%;
  height: 24px;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.p2 {
  width: 300%;
  height: 24px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.social_media {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 1px;
  width: 100%;
  height: 40px;
  flex: none;
  order: 1;
  flex-grow: 0;
  list-style: none;
  justify-content: space-between;
}

.socials {
  padding: 9px;
  width: 40px;
  height: 40px;
  border-radius: 8px;
}

.works_section {
  display: grid;
  grid-template-columns: auto;
  gap: 88px;
  padding: 114px 24px;
  width: 92%;
  height: 2788px;
}

.card_works_one {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 16px;
  width: 92%;
  height: 552px;
  background: #fff;
  border: 1px solid #4b5878;
  border-radius: 16px;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.portfolio_snap_1 {
  width: 120%;
  height: 220px;
  border-radius: 8px;
  flex: none;
  order: o;
  flex-grow: 0;
}

.left_block {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 380%;
  height: 288px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

.primary_text {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  height: 110px;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.works_header {
  width: 295px;
  height: 70px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 40px;
  color: #172b4d;
  flex: 1;
  order: 0;
}

.header_details {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  gap: 1px;
  width: 250px;
  height: 32px;
  flex: none;
  order: 1;
  bottom: 1px;
  flex-grow: 0;
  justify-content: space-between;
  padding-left: 0;
  margin-left: 0;
}

.spec {
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  font-size: 13px;
  line-height: 16px;
  flex: 1;
  order: 0;
  flex-grow: 1;
  text-align: center;
}

.header_details_name {
  display: flex;
  width: 90px;
  height: 24px;
  margin-right: 20px;
  color: #344563;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.header_details .header_details_name {
  list-style: none;
  color: #344563;
}

.header_details_specification {
  width: 123px;
  height: 20px;
  margin-right: 20px;
  flex: none;
  order: 2;
  flex-grow: 0;
  color: #7a869a;
}

.header_details_year {
  width: 29px;
  height: 20px;
  flex: none;
  order: 4;
  flex-grow: 0;
  color: #7a869a;
}

.paragraph_details {
  width: 26%;
  height: 76px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
  flex: 1;
  order: 0;
  flex-grow: 0;
  margin-bottom: 4px;
}

.language_list {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0;
  grid-area: 8px;
  width: 280px;
  height: 24px;
  list-style: none;
  text-decoration: none;
}

.langs {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #6070ff;
  padding: 3px 3px;
  width: 45px;
  height: 24px;
  background: #ebebff;
  border-radius: 8px;
  margin-right: 10px;
}

.html_lang {
  width: 45px;
}
/* ... */

